# IP-Task2

./: .gitignore  README.md
IP-Task2/: IP-Task2.sln
IP-Task2/IP-Task2/: ArgumentsHandler.cpp  ArgumentsHandler.h  HistogramCreator.cpp  HistogramProcesser.cpp  HistogramProcesser.h  IP-Task2.vcxproj  IP-Task2.vcxproj.filters  ImageCharacteristicsCalculator.cpp  ImageProcesser.cpp  ImageProcesser.h  Processer.cpp  Processer.h  main.cpp  resource.h
Project/: CMakeLists.txt  CMakeSettings.json
Project/program/src/: main.cpp
Project_CMake/: CMakeLists.txt
Project_CMake/program/: CMakeLists.txt
Project_CMake/program/src/: main.cpp
